--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,3 +2,6 @@ $color-button: hsl(322, 100%, 66%);
 $color-veryPaleCyan: hsl(193, 100%, 96%);
 $color-veryDarkCyan: hsl(192, 100%, 9%);
 $color-grayishBlue: hsl(208, 11%, 55%);
+
+$font--primary: "Poppins", sans-serif; //  Weights: 600
+$font--secondary: "Open Sans", sans-serif; //  Weights: 400, 700
