--- a/scss/layout/_flowing.scss
+++ b/scss/layout/_flowing.scss
@@ -1,9 +1,17 @@
 .flowing {
   &__card {
+    flex-direction: row;
   }
+
   &__text-wrapper {
+    @media (min-width: 810px) {
+      max-width: 40%;
+    }
   }
 
   &__picture {
+    @media (min-width: 810px) {
+      max-width: 40%;
+    }
   }
 }
