--- a/scss/layout/_grow.scss
+++ b/scss/layout/_grow.scss
@@ -3,8 +3,14 @@
   }
 
   &__text-wrapper {
+    @media (min-width: 810px) {
+      max-width: 40%;
+    }
   }
 
   &__picture {
+    @media (min-width: 810px) {
+      max-width: 40%;
+    }
   }
 }
