--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -10,6 +10,11 @@
     font-weight: 700;
     font-size: 1.1rem;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    @media (min-width: 1140px) {
+      width: 20rem;
+      padding: 1.5rem 0;
+      font-size: 1.5rem;
+    }
     &--primary {
     }
     &--secondary {
