--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -15,30 +15,51 @@
   &__logo {
     width: 10rem;
     &--header {
+      @media (min-width: 1140px) {
+        width: 20rem;
+      }
     }
 
     &--footer {
       width: 15rem;
       margin-bottom: 2rem;
       filter: brightness(0) invert(1);
+      @media (min-width: 810px) {
+        margin-left: 7.5%;
+      }
     }
   }
 
   &__header-wrapper {
+    @media (min-width: 810px) {
+      display: grid;
+      grid-template-columns: 40% 60%;
+    }
   }
 
   &__text-wrapper {
+    @media (min-width: 810px) {
+      text-align: left;
+    }
   }
 
   &__title {
     &--primary {
-      font-size: 2.4rem;
+      font-size: clamp(2.4rem, 3.5vw, 4rem);
       max-width: 34rem;
       padding: 9rem 2rem 3rem;
+      @media (min-width: 810px) {
+        padding: 9rem 0 3rem;
+        max-width: 50rem;
+      }
     }
+
     &--secondary {
       font-size: 2rem;
       margin: 5rem 0 2rem;
+      @media (min-width: 810px) {
+        margin: 0 0 2rem;
+      }
     }
 
     &--tertiary {
@@ -46,10 +67,13 @@
   }
 
   &__subtitle {
-    font-size: 1.6rem;
+    font-size: clamp(1.6rem, 1.6vw, 1.7rem);
     font-weight: 400;
     &--primary {
       padding: 0 1.5rem;
+      @media (min-width: 810px) {
+        padding: 0;
+      }
     }
     &--secondary {
       color: $color-grayishBlue;
@@ -60,6 +84,9 @@
   }
 
   &__poster {
+    @media (min-width: 810px) {
+      align-self: center;
+    }
   }
 
   &__main {
@@ -71,6 +98,9 @@
     max-width: 73rem;
     margin: 0 auto;
     padding: 6rem 0 20rem 0;
+    @media (min-width: 810px) {
+      max-width: unset;
+    }
   }
 
   &__card {
@@ -78,5 +108,17 @@
     margin-bottom: 4rem;
     padding: 4rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    @media (min-width: 810px) {
+      max-width: 85%;
+      margin: 0 auto;
+    }
+
+    @media (min-width: 810px) {
+      display: flex;
+      flex-direction: row-reverse;
+      align-items: center;
+      text-align: left;
+      justify-content: space-between;
+    }
   }
 }
