--- a/scss/layout/_flowing.scss
+++ b/scss/layout/_flowing.scss
@@ -5,7 +5,8 @@
 
   &__text-wrapper {
     @media (min-width: 810px) {
-      max-width: 40%;
+      max-width: 45%;
+      padding-right: 4rem;
     }
   }
 
