--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,7 +9,7 @@
   &__info {
     @media (min-width: 810px) {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: 1fr 2fr 1fr;
       max-width: 85%;
       margin: 0 auto;
     }
@@ -74,7 +74,8 @@
     font-size: 1.8rem;
     @media (min-width: 810px) {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+      // grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       margin: 0;
       font-size: 1.5rem;
     }
@@ -85,10 +86,33 @@
   }
 
   &__link {
+    position: relative;
+
     &:link,
     &:visited {
       color: $color-veryPaleCyan;
       text-decoration: none;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 0.1rem;
+      left: 0;
+      bottom: 0;
+      background-color: $color-veryPaleCyan;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.3s;
+    }
+
+    &:active,
+    &:hover {
+      &::after {
+        visibility: visible;
+        opacity: 1;
+      }
     }
   }
 
@@ -97,6 +121,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: flex-start;
     }
     &--icons {
     }
@@ -107,15 +132,15 @@
       justify-content: center;
       align-items: center;
       gap: 2rem;
+      @media (min-width: 1140px) {
+        justify-content: flex-start;
+      }
     }
 
     &--item {
     }
 
     &--link {
-      border: 0.1rem solid $color-veryPaleCyan;
-      padding: 0.5rem;
-      border-radius: 50%;
     }
 
     &--link svg path {
@@ -123,8 +148,20 @@
     }
 
     &--link svg {
-      width: 2rem;
-      height: 1.5rem;
+      width: 3rem;
+      height: 3rem;
+      border: 0.1rem solid $color-veryPaleCyan;
+      padding: 0.5rem;
+      border-radius: 50%;
+      transition: all 0.3s;
+
+      &:hover {
+        border: 0.1rem solid $color-button;
+
+        &--link svg path {
+          fill: $color-button;
+        }
+      }
     }
   }
 
@@ -138,6 +175,10 @@
     font-size: 1.1rem;
     text-align: center;
     margin-top: 3rem;
+    @media (min-width: 810px) {
+      text-align: left;
+      margin: 0;
+    }
   }
 
   &__attribution {
