--- a/scss/layout/_grow.scss
+++ b/scss/layout/_grow.scss
@@ -4,7 +4,8 @@
 
   &__text-wrapper {
     @media (min-width: 810px) {
-      max-width: 40%;
+      max-width: 45%;
+      padding-left: 4rem;
     }
   }
 
