--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,12 +4,18 @@
     background-image: url("./../../images/bg-hero-mobile.svg");
     background-color: $color-veryPaleCyan;
     background-size: cover;
+    @media (min-width: 810px) {
+      background-image: url("./../../images/bg-hero-desktop.svg");
+    }
   }
 
   &__menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media (min-width: 1140px) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -55,7 +61,7 @@
     }
 
     &--secondary {
-      font-size: 2rem;
+      font-size: clamp(2rem, 2.5vw, 2.8rem);
       margin: 5rem 0 2rem;
       @media (min-width: 810px) {
         margin: 0 0 2rem;
@@ -68,6 +74,7 @@
 
   &__subtitle {
     font-size: clamp(1.6rem, 1.6vw, 1.7rem);
+    font-family: $font--secondary;
     font-weight: 400;
     &--primary {
       padding: 0 1.5rem;
@@ -77,7 +84,7 @@
     }
     &--secondary {
       color: $color-grayishBlue;
-      font-size: 1.4rem;
+      font-size: clamp(1.4rem, 1.5vw, 1.8rem);
     }
     &--tertiary {
     }
@@ -87,19 +94,27 @@
     @media (min-width: 810px) {
       align-self: center;
     }
+    @media (min-width: 1140px) {
+      width: 90%;
+      justify-self: end;
+    }
   }
 
   &__main {
+    font-family: $font--primary;
   }
 
   &__cards {
     position: relative;
-    width: 90%;
+    width: 89%;
     max-width: 73rem;
     margin: 0 auto;
     padding: 6rem 0 20rem 0;
     @media (min-width: 810px) {
       max-width: unset;
+    }
+    @media (min-width: 1140px) {
+      padding: 6rem 0 32rem 0;
     }
   }
 
@@ -109,8 +124,8 @@
     padding: 4rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     @media (min-width: 810px) {
-      max-width: 85%;
-      margin: 0 auto;
+      //   max-width: 89%;
+      margin: 4rem auto;
     }
 
     @media (min-width: 810px) {
