--- a/css/style.css
+++ b/css/style.css
@@ -82,13 +82,13 @@ body {
 }
 
 .huddle__header {
-  background-image: url("./../../images/bg-hero-mobile.svg");
+  background-image: url("./../images/bg-hero-mobile.svg");
   background-color: #ebfbff;
   background-size: cover;
 }
 @media (min-width: 810px) {
   .huddle__header {
-    background-image: url("./../../images/bg-hero-desktop.svg");
+    background-image: url("./../images/bg-hero-desktop.svg");
   }
 }
 .huddle__menu {
