--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,11 +1,11 @@
 @use "../abstracts/index" as *;
 .huddle {
   &__header {
-    background-image: url("./../../images/bg-hero-mobile.svg");
+    background-image: url("./../images/bg-hero-mobile.svg");
     background-color: $color-veryPaleCyan;
     background-size: cover;
     @media (min-width: 810px) {
-      background-image: url("./../../images/bg-hero-desktop.svg");
+      background-image: url("./../images/bg-hero-desktop.svg");
     }
   }
 
